removed links in welcome marketing container

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -63,19 +63,19 @@
         <%= image_tag('Cruiseline-625x400-c-default.jpg', class: 'img-circle', width: '140', height: '140') %>
         <h2>Neighbors</h2>
         <p>Founded in 2015, we know the local community and care about our fellow neighbors, friends and visitors of Lake Geneva, Wisconsin.  Stop in today for a friendly and free consultation.</p>
-        <p><a class="btn btn-default" href="#" role="button">Contact us &raquo;</a></p>
+        <!-- <p><a class="btn btn-default" href="#" role="button">Contact us &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <%= image_tag('IMG_3968.JPG', class: 'img-circle', width: '140', height: '140') %>
         <h2>Skin Specialist</h2>
         <p>As a skin care specialist, Certified with Dermalogica Products, Get Pampered Mini Spa offers many services priced affordable, one on one treatment.  Get the Spa experience WITHOUT the Resort Spa prices!</p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <%= image_tag('IMG_3967.JPG.jpeg', class: 'img-circle', width: '140', height: '140') %>
         <h2>Essentials</h2>
         <p>We offer an array of essential and personalized services inspired by local and ancient skin care traditions to help you battle aging, acne, dark-spots and other skin conditions.</p>
-        <p><a class="btn btn-default" href="#" role="button">Book an appointment &raquo;</a></p>
+        <!-- <p><a class="btn btn-default" href="#" role="button">Book an appointment &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
