welcome index img ext

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -72,7 +72,7 @@
         <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <%= image_tag('IMG_3967.jpeg', class: 'img-circle', width: '140', height: '140') %>
+        <%= image_tag('IMG_3967.jpg', class: 'img-circle', width: '140', height: '140') %>
         <h2>Essentials</h2>
         <p>We offer an array of essential and personalized services inspired by local and ancient skin care traditions to help you battle aging, acne, dark-spots and other skin conditions.</p>
         <!-- <p><a class="btn btn-default" href="#" role="button">Book an appointment &raquo;</a></p> -->
@@ -114,7 +114,7 @@
         <p class="lead">Underneath your skin is a brighter, smoother and more refined complexion waiting to be revealed.  Chemical peels can help bring that out, instantly.  Whether you want to reduce discoloration caused by sun damage, clear up breakouts or smooth away the look of wrinkles, chemical peels are proven to noticeably imporve your skin in more ways than one.</p>
       </div>
       <div class="col-md-5">
-        <%= image_tag("facial.jpeg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
+        <%= image_tag("facial.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
       </div>
     </div>
 
