--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -99,7 +99,7 @@
     <div class="row featurette">
       <div class="col-md-7 col-md-push-5">
         <h2 class="featurette-heading">Natural-looking skin.  <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Expert in delivering natural-looking, safe and effective results with the latest non-sugical cosmetic treatments, including microdermadrasion, physcian-desigend faicals, chemical peels and a healthy lifestyle.</p>
+        <p class="lead">Expert in delivering natural-looking, safe and effective results with the latest non-surgical cosmetic treatments, including microdermabrasion, physician-designed facials, chemical peels and a healthy lifestyle.</p>
       </div>
       <div class="col-md-5 col-md-pull-7">
         <%= image_tag("IMG_3962.JPG", class: "featurette-image img-responsive center-block") %>
@@ -111,7 +111,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Chemical Peels.  <span class="text-muted">A brighter, smoother and more refined you.</span></h2>
-        <p class="lead">Underneath your skin is a brighter, smoother and more refined complexion waiting to be revealed.  Chemical peels can help bring that out, instantly.  Whether you want to reduce discoloration caused by sun damage, clear up breakouts or smooth away the look of wrinkles, chemical peels are proven to noticeably imporve your skin in more ways than one.</p>
+        <p class="lead">Underneath your skin is a brighter, smoother and more refined complexion waiting to be revealed. Chemical peels can help bring that out, instantly. Whether you want to reduce discoloration caused by sun damage, clear up breakouts or smooth away the look of wrinkles, chemical peels are proven to noticeably improve your skin in more ways than one.</p>
       </div>
       <div class="col-md-5">
         <%= image_tag("facial.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
