--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -72,7 +72,7 @@
         <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <%= image_tag('IMG_3967.jpg', class: 'img-circle', width: '140', height: '140') %>
+        <%= image_tag('oils.jpg', class: 'img-circle', width: '140', height: '140') %>
         <h2>Essentials</h2>
         <p>We offer an array of essential and personalized services inspired by local and ancient skin care traditions to help you battle aging, acne, dark-spots and other skin conditions.</p>
         <!-- <p><a class="btn btn-default" href="#" role="button">Book an appointment &raquo;</a></p> -->
