--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>Revive</h1>
-            <p class="carousel-text">Your skin matters</p>
+            <p class="carousel-text">A place where your skin matters</p>
             <hr class="purple">
           </div>
         </div>
