carousel indicator active color change

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -180,8 +180,8 @@ hr.purple:before {
 
 
 .carousel-indicators .active {
-  border-color: $blue !important;;
-  background-color: $blue !important;
+  border-color: #85144b !important;;
+  background-color: #85144b !important;
 }
 
 .carousel-inner-adjust {
