--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,6 +1,10 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="contact-page"></div>
+    <div class="contact-page">
+      <div class="text-center book-appointment">
+        <h1>Contact me</h1>
+      </div>
+    </div>
     <div class="col-xs-12 contact-section">
       <div class="location text-center">
         <h1 class="contact-title">Get Pampered <small>Mini Spa<small></h1>
@@ -24,7 +28,7 @@ handler.buildMap({ provider: { maxZoom: 13, backgroundColor: "#FFFFFF" }, intern
     {
        "lat": 42.5456022,
         "lng": -88.4678635,
-      "infowindow": "Get Pampered Mini Spa, W3407, Linton Rd, Lake Geneva, WI 53147<br><a href=\"https://www.google.com/maps/place/Get+Pampered+Mini+Spa/@42.5457919,-88.4685072,18z/data=!4m5!3m4!1s0x0:0xfc3fc7ab2bceb09!8m2!3d42.5456022!4d-88.4678635\">Get Directions</a>"
+      "infowindow": "Get Pampered Mini Spa, W3407 Linton Rd, Lake Geneva, WI 53147<br><a href=\"https://www.google.com/maps/place/Get+Pampered+Mini+Spa/@42.5457919,-88.4685072,18z/data=!4m5!3m4!1s0x0:0xfc3fc7ab2bceb09!8m2!3d42.5456022!4d-88.4678635\">Get Directions</a>"
     }
   ]);
   handler.bounds.extendWith(markers);
