contact pic to one of lake geneva

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,5 +1,5 @@
 .contact-page {
-  background-image: image_url("IMG_0736.jpg");
+  background-image: image_url("wisconsin-lake-geneva-docks-at-dusk.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
