google api fix?

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -21,8 +21,12 @@
 
 }
 
+#basic_map {
+  width: auto;
+  height: 400px;
+}
+
 .gmap {
-  width: 100%;
   border: 15px solid #eee;
   margin-bottom: 15rem;
 }
