--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -15,8 +15,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="gmap">
-      <div id="basic_map" style='width: auto; height: 400px;'></div>
+    <div class="gmap embed-responsive embed-responsive-16by9">
+      <div id="basic_map"></div>
     </div>
   </div>
 </div>
