--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div class="navbar-wrapper">
       <div class="container">
 
-        <nav class="navbar navbar-inverse navbar-static-top">
+        <nav class="navbar-fixed-top navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-interval="6000" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -48,7 +48,7 @@
 
 <div class="container-fluid footer">
     <footer>
-      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p class="pull-right"><%= fa_icon "phone" %> 262-949-2950</p>
       <p>&copy; 2016 Get Pampered Mini Spa &middot;</p>
     </footer>
   </div>
