--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -55,10 +55,10 @@
   ================================================== -->
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
-  <div class="container marketing">
+  <div class="container-fluid marketing">
 
     <!-- Three columns of text below the carousel -->
-    <div class="row">
+    <div class="row marketing-circles">
       <div class="col-lg-4">
         <%= image_tag('Cruiseline-625x400-c-default.jpg', class: 'img-circle', width: '140', height: '140') %>
         <h2>Neighbors</h2>
@@ -82,43 +82,43 @@
 
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">Microdermabrasion.  <span class="text-muted">Your aging skin's worst enemy.</span></h2>
-        <p class="lead">Microdermabrasion treatments are aging skin's worst enemy because they lift all the incriminating skin that makes us look older and reveal the youthful, radiant skin that lies beneath.  Safe and effective for most skin types and tones, microdermabrasion treatments help to improve the texture of the skin as well as help address some forms of acne, oily skin, blackheads and whiteheads.  Recommended for men and woman.</p>
+    <div class="row marketing-background-1">
+      <div class="featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Microdermabrasion.  <span class="text-muted">Your aging skin's worst enemy.</span></h2>
+          <p class="lead white-lead">Get Pampered Mini Spa microdermabrasion treatments are aging skin's worst enemy because they lift all the incriminating skin that makes us look older and reveal the youthful, radiant skin that lies beneath.  Safe and effective for most skin types and tones, microdermabrasion treatments help to improve the texture of the skin as well as help address some forms of acne, oily skin, blackheads and whiteheads.  Recommended for men and woman.</p>
+        </div>
+        <div class="col-md-5">
+          <%= image_tag("14980826_354692821533000_3070654926771623352_n.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
+        </div>
       </div>
-      <div class="col-md-5">
-        <%= image_tag("images.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
+    </div>
+
+    <div class="row marketing-background-2">
+      <div class="featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading featurette-heading-2">Natural-looking skin.  <span class="text-muted">See for yourself.</span></h2>
+          <p class="lead">Get Pampered Mini Spa delivers natural-looking, safe and effective results with the latest non-surgical cosmetic treatments, including microdermabrasion, physician-designed facials, chemical peels and a healthy lifestyle.</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <%= image_tag("IMG_3962.JPG", class: "featurette-image img-responsive center-block") %>
+        </div>
       </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
-      <div class="col-md-7 col-md-push-5">
-        <h2 class="featurette-heading">Natural-looking skin.  <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Expert in delivering natural-looking, safe and effective results with the latest non-surgical cosmetic treatments, including microdermabrasion, physician-designed facials, chemical peels and a healthy lifestyle.</p>
-      </div>
-      <div class="col-md-5 col-md-pull-7">
-        <%= image_tag("IMG_3962.JPG", class: "featurette-image img-responsive center-block") %>
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">Chemical Peels.  <span class="text-muted">A brighter, smoother and more refined you.</span></h2>
-        <p class="lead">Underneath your skin is a brighter, smoother and more refined complexion waiting to be revealed. Chemical peels can help bring that out, instantly. Whether you want to reduce discoloration caused by sun damage, clear up breakouts or smooth away the look of wrinkles, chemical peels are proven to noticeably improve your skin in more ways than one.</p>
-      </div>
-      <div class="col-md-5">
-        <%= image_tag("facial.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
+    <div class="row marketing-background-1">
+      <div class="featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Chemical Peels.  <span class="text-muted">A brighter, smoother and more refined you.</span></h2>
+          <p class="lead white-lead">Underneath your skin is a brighter, smoother and more refined complexion waiting to be revealed. Chemical peels can help bring that out, instantly. Whether you want to reduce discoloration caused by sun damage, clear up breakouts or smooth away the look of wrinkles, chemical peels are proven to noticeably improve your skin in more ways than one.</p>
+        </div>
+        <div class="col-md-5">
+          <%= image_tag("facial.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
+        </div>
       </div>
     </div>
-
-    <hr class="featurette-divider">
 
       <!-- /END THE FEATURETTES -->
 <script>
