--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,8 +57,12 @@ hr.purple:before {
   z-index: 20;
 }
 
+.navbar-fixed-top {
+  padding: 10px 0;
+  background-color: rgba(0, 0, 0, .4);
+}
+
 .navbar-inverse {
-  background-color: transparent !important;
   border: none;
 }
 
@@ -206,9 +210,17 @@ hr.purple:before {
   margin-left: 10px;
 }
 
+.marketing-circles {
+  margin-bottom: 6rem;
+}
+
 
 /* Featurettes
 ------------------------- */
+
+.featurette {
+  padding: 0 15px;
+}
 
 .text-muted {
   color: #1abc9c;
@@ -227,6 +239,10 @@ hr.purple:before {
   letter-spacing: -1px;
 }
 
+.featurette-heading-2 {
+  padding-top: 4rem;
+}
+
 .img-circle {
   border: 10px solid #eee;
   object-fit: cover;
@@ -236,6 +252,10 @@ hr.purple:before {
   border: 10px solid #eee;
 }
 
+.white-lead {
+  color: #FFFFFF !important;
+} 
+
 /* Footer
 --------------------------------*/
 
@@ -243,10 +263,10 @@ hr.purple:before {
   border-top: 15px solid #EEEEEE;
   color: $blue;
   font-size: 18px;
-  padding-top: 115px;
+  padding-top: 4rem;
   background-color: #85144b;
   width: 100%;
-  height: 17rem;
+  height: 10rem;
   text-align: bottom;
   a {
     color: $blue;
@@ -261,7 +281,7 @@ hr.purple:before {
 @media (min-width: 768px) {
   /* Navbar positioning foo */
   .navbar-wrapper {
-    margin-top: 20px;
+    padding-top: 20px;
   }
   .navbar-wrapper .container {
     padding-right: 15px;
