--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,3 +1,7 @@
-$blue: #1abc9c;
+$salmon: #D94848;
+$light-salmon: #D96459;
+$light-pink: #DF8D8D;
+$grey: #AFAFB1;
+$rose-brown: #593939;
 
 $plum: #531357;
