--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@ body {
 hr.purple { 
   height: 30px; 
   border-style: double; 
-  border-color: #85144b; 
+  border-color: #eee; 
   border-width: 1px 0 0 0; 
   border-radius: 20px; 
 } 
@@ -38,7 +38,7 @@ hr.purple:before {
   margin-top: -31px; 
   margin-bottom: 0px;
   border-style: double; 
-  border-color: #85144b; 
+  border-color: #eee; 
   border-width: 0 0 1px 0; 
   border-radius: 20px; 
 }
@@ -59,7 +59,7 @@ hr.purple:before {
 
 .navbar-fixed-top {
   padding: 10px 0;
-  background-color: rgba(0, 0, 0, .4);
+  background-color: rgba(89,57,57, .4);
 }
 
 .navbar-inverse {
@@ -67,6 +67,7 @@ hr.purple:before {
 }
 
 .navbar-inverse .navbar-nav > li > a {
+  font-size: 18px;
   color: #ffffff !important;
 }
 
@@ -84,12 +85,12 @@ hr.purple:before {
 }
 
 .navbar-brand {
-  text-shadow: 1px 1px 1px $blue;
+  text-shadow: 1px 1px 1px $salmon;
   font-family: 'Clicker Script', cursive;
   color: #FFFFFF !important;
   font-size: 50px;
   &:hover {
-    color: $blue !important;
+    color: $salmon !important;
   };
 }
 
@@ -110,7 +111,7 @@ hr.purple:before {
   left: 0;
   bottom: 0;
   z-index: 50;
-  border-left: 5px solid $blue;
+  border-left: 5px solid $light-pink;
 }
 
 /* CUSTOMIZE THE CAROUSEL
@@ -124,8 +125,8 @@ hr.purple:before {
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   h1 {
-    color: $blue;
-    text-shadow: 1px 1px 1px #85144b;
+    color: $light-pink;
+    text-shadow: 1px 1px 1px $rose-brown;
     font-family: 'Clicker Script', cursive;
     font-size: 70px;
   }
@@ -185,8 +186,8 @@ hr.purple:before {
 
 
 .carousel-indicators .active {
-  border-color: #85144b !important;;
-  background-color: #85144b !important;
+  border-color: $rose-brown !important;;
+  background-color: $rose-brown !important;
 }
 
 .carousel-inner-adjust {
@@ -223,7 +224,7 @@ hr.purple:before {
 }
 
 .text-muted {
-  color: #1abc9c;
+  color: $light-pink;
   font-family: 'Clicker Script', cursive;
 }
 
@@ -233,7 +234,7 @@ hr.purple:before {
 
 /* Thin out the marketing headings */
 .featurette-heading {
-  color: #85144b;
+  color: #eee;
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
@@ -241,6 +242,7 @@ hr.purple:before {
 
 .featurette-heading-2 {
   padding-top: 4rem;
+  color: $grey;
 }
 
 .img-circle {
@@ -261,15 +263,15 @@ hr.purple:before {
 
 .footer {
   border-top: 15px solid #EEEEEE;
-  color: $blue;
+  color: $rose-brown;
   font-size: 18px;
   padding-top: 4rem;
-  background-color: #85144b;
+  background-color: #ffffff;
   width: 100%;
   height: 10rem;
   text-align: bottom;
   a {
-    color: $blue;
+    color: $rose-brown;
     font-size: 18px;  
   }
 }
