welcome index image change

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
     <div class="carousel-inner carousel-inner-adjust" role="listbox">
       <small class="pull-right lake-geneva-wisconsin">Lake Geneva, Wisconsin</small>
       <div class="item active">
-        <%= image_tag('spa1.jpg') %>
+        <%= image_tag('salon565.jpg') %>
         <div class="container">
           <div class="carousel-caption">
             <h1>Relax</h1>
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="item">
-        <%= image_tag('spa3.jpg') %>
+        <%= image_tag('spa2.jpg') %>
         <div class="container">
           <div class="carousel-caption">
             <h1>Rejuvinate</h1>
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="item">
-        <%= image_tag('spa2.jpg') %>
+        <%= image_tag('spa1.jpg') %>
         <div class="container">
           <div class="carousel-caption">
             <h1>Revive</h1>
