removed fa icon phone footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
 
 <div class="container-fluid footer">
     <footer>
-      <p class="pull-right"><%= fa_icon "phone" %> 262-949-2950</p>
+      <p class="pull-right">262-949-2950</p>
       <p>&copy; 2016 Get Pampered Mini Spa &middot;</p>
     </footer>
   </div>
