--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,7 +90,7 @@ hr.purple:before {
   color: #FFFFFF !important;
   font-size: 50px;
   &:hover {
-    color: $salmon !important;
+    color: $light-pink !important;
   };
 }
 
@@ -287,7 +287,7 @@ hr.purple:before {
     color: #FFFFFF !important;
     font-size: 50px;
     &:hover {
-      color: $salmon !important;
+      color: $light-pink !important;
     };
   }
   /* Navbar positioning foo */
