--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav pull-right">
                 <li><a href="/">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="/welcome/about">About</a></li>
                 <li><a href="#about">Services</a></li>
                 <li><a href="/welcome/contact">Contact</a></li>
               </ul>
