--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -6,15 +6,17 @@
       </div>
     </div>
     <div class="col-xs-12 contact-section">
-      <div class="location text-center">
+      <div class="location col-md-8 col-md-offset-2 text-center">
+        <%= image_tag('Lausanne-Lake-Geneva-Switzerland.jpg', class: 'img-circle', width: '140', height: '140') %>
         <h1 class="contact-title">Get Pampered <small>Mini Spa<small></h1>
-        <h3>W3407 Linton Rd</h3>
-        <h3>Lake Geneva, WI 53147</h3> 
-        <h3>(262) 949-2950</h3>
+        <h1>Stacey Pacholczak</h1>
+        <h1>W3407 Linton Rd</h1>
+        <h1>Lake Geneva, WI 53147</h1> 
+        <h1>(262) 949-2950</h1>
       </div>
     </div>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="gmap">
       <div id="basic_map" style='width: auto; height: 400px;'></div>
     </div>
@@ -34,4 +36,4 @@ handler.buildMap({ provider: { maxZoom: 13, backgroundColor: "#FFFFFF" }, intern
   handler.bounds.extendWith(markers);
   handler.fitMapToBounds();
 });
-</script>
+</script> -->
