--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,54 @@
+.about-hero {
+  margin-top: 10rem;
+  }
+
+.about-me {
+  background-color: $rose-brown;
+  height: 90vh;
+}
+.about-me-2 {
+  background-color: $grey;
+  height: 10px;
+}
+
+.about-me-3 { 
+  background-color: #FFFFFF;
+  height: 1000px;
+}
+
+.stacey {
+  background-image: image_url("11899760_154835718185379_8484751466328785442_n.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 350px;
+  height: 350px;
+  border-radius: 200px;
+  border: 6px solid $rose-brown;
+  margin: 0 auto;
+}
+
+.about-me-text {
+  margin-bottom: 3rem;
+  font-family: 'Clicker Script', cursive;
+  color: #FFFFFF;
+  font-size: 85px;
+}
+
+.about-me-paragraph {
+  font-size: 30px;
+  line-height: 1.5;
+  margin-top: 10rem;
+  p {
+    color: $rose-brown;
+  }
+  a {
+    padding: 14px;
+    border: 5px solid $light-pink;
+    color: $light-pink;
+  }
+}
+
 .marketing-background-1 {
   background-color: $rose-brown;
   padding: 5rem 0;
@@ -9,26 +60,31 @@
 }
 
 .contact-page {
-  background-image: image_url("wisconsin-lake-geneva-docks-at-dusk.jpg");
+  background-image: image_url("salon565.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  height: 600px;
-  border-bottom: 15px double $salmon;
+  height: 400px;
+  border-bottom: 2px solid $light-pink;
 }
 
 .book-appointment {
   font-family: 'Clicker Script', cursive;
+  text-shadow: 1px 1px 1px $light-pink;
   color: #FFFFFF;
   z-index: 5;
   padding-top: 15rem;
   h1 {
-  font-size: 60px;
+  font-size: 80px;
   }
 }
 
 .contact-section {
-
+  color: $light-pink;
+  background-color: $rose-brown;
+  a {
+    color: $light-pink;
+  }
 }
 
 .gmap {
@@ -38,8 +94,8 @@
 }
 
 .location {
-  padding-top: 115px;
-  height: 500px;
+  padding-top: 50px;
+  height: 600px;
 }
 
 .contact-title {
