--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,33 +1,26 @@
-<div class="container-fluid bg-1 text-center">
-  <h3 class="margin">Who Am I?</h3>
-  <img src="bird.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-  <h3>I'm an adventurer</h3>
-</div>
+<div class="container-fluid">
 
-<!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
-  <h3 class="margin">What Am I?</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-  <a href="#" class="btn btn-default btn-lg">
-    <span class="glyphicon glyphicon-search"></span> Search
-  </a>
-</div>
+  <div class="row about-me">
 
-<!-- Third Container (Grid) -->
-<div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Where To Find Me?</h3><br>
-  <div class="row">
-    <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    <div class="col-md-12 text-center">
+      <div class="about-hero">
+        <div class="text-center img-responsive stacey"></div>
+        <h1 class="about-me-text">About me</h1>
+      </div>
     </div>
-    <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
+
   </div>
+
+  <div class="row about-me-2"></div>
+
+  <div class="row about-me-3">
+
+    <div class="col-md-offset-2 col-md-8">
+      <div class="about-me-paragraph">
+        <p>Stacey Pacholczak is a licensed Personal Skin Care and Massage Therapist.  She offers more than the basic Spa Treatments.  When getting a massage you will know it is YOUR hour, from Relaxing to Deeper Tissue Massage.  She uses Retail and Professional Dermalogica Products, and 100% Pure Essential Oils.<br><br>When it comes to Skin Care she is all about healing, education and correcting your skin, giving you the results you are looking to achieve, as well as your basic ralxing facial.<br><br>Founded in 2015, Get Pampered Mini Spa offers many services at an afforable price.  With modern and ancient techniquies, her one-on-one treatments are exculsive and one of a kind.<br><br>With Stacey, you will get the Spa experience WITHOUT the Resort Spa prices!<br><br><span class="pull-right"><%= link_to "Book an appoitment today", welcome_contact_path %></span></p>
+      </div>
+    </div>
+
+  </div>
+
 </div>
